src/css/components/_on-screen-presets.scss
.on-screen-presets { 
    height: 100%;
    @include display(flex);
    @include flex-direction(column);
}

.on-screen-presets-container {
    width: 100%;
    display: flex;
    align-items: center;
}

.on-screen-presets .soft-buttons {
    width: 100%;
    @include display(flex);
    @include justify-content(space-around);
    @include flex-direction(row);
    @include flex-wrap(nowrap);
    @include align-items(stretch);
    flex-shrink: 0;
    height: 100px;
}

.on-screen-presets .soft-button {
    width: 100%;
    border-radius: 0px;
    margin-bottom: 0px;
}

.on-screen-presets .progress-bar {
    position: relative;
    height: calc((#{$master-height} - 75px) / 12) ;

    border-bottom: 2px solid;

    &__progress {
        position: absolute;
        height: 100%;
        background: color($secondary-accent-color);
    }
}

.on-screen-presets .media-track {
    padding-top: 10px;
    width: 60%;
    position: relative;

    text-align: center;

    @include display(flex);
    @include flex-direction(column);

    &__time {
        position: absolute;
        bottom: 30px;
        width: 100%
    }
}

